# xet-core

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  README_WASM_BUILD.md  build_xet_wasm.sh  example_integration.sh  hf-xet-diag-analyze-latest.sh  hf-xet-diag-linux.sh  hf-xet-diag-macos.sh  hf-xet-diag-windows.sh  markdownlint.toml  pre_existing_issues.md  pyproject.toml  rustfmt.toml  spec.md
cas_client/: Cargo.toml  README.md
cas_client/src/: adaptive_concurrency_control.rs  auth.rs  caching_client.rs  client_testing_utils.rs  constants.rs  data_transport.rs  download_utils.rs  dry_run_client.rs  error.rs  global_dedup_table.rs  http_client.rs  http_shard_client.rs  interface.rs  lib.rs  local_client.rs  local_shard_client.rs  memory_cache.rs  multipart.rs  output_provider.rs  progress_tracked_streams.rs  remote_client.rs  retry_utils.rs  retry_wrapper.rs  upload_progress_stream.rs  util.rs
cas_client/tests/: reconstruction.rs  test_shard_upload_timeout.rs
cas_object/: Cargo.toml
cas_object/benches/: bg_split_regroup_bench.rs  compression_bench.rs
cas_object/src/: bg4_prediction.rs  cas_chunk_format.rs  cas_object_format.rs  chunk_verification.rs  compression_scheme.rs  constants.rs  error.rs  lib.rs  raw_xorb_data.rs  stream_xorb.rs  validate_xorb_stream.rs
chunk_cache/: Cargo.toml
chunk_cache/benches/: cache_bench.rs  results.md  sccache.rs  solid_cache.rs
chunk_cache/src/: cache_manager.rs  disk.rs  disk_cache.rs  error.rs  lib.rs  memory.rs  sccache.rs  solid_cache.rs
chunk_cache_bench/: Cargo.toml
chunk_cache_bench/benches/: cache_bench.rs  results.md
chunk_cache_bench/src/: lib.rs  sccache.rs  solid_cache.rs
chunk_cache_fast/: Cargo.toml
chunk_cache_fast/src/: cache_manager.rs  disk.rs  error.rs  lib.rs
chunking/: Cargo.toml
chunking/src/: chunking.rs  constants.rs  lib.rs
data/: Cargo.toml
data/src/: cached_xet_client.rs  cas_interface.rs  chunking.rs  clean.rs  configurations.rs  constants.rs  data_aggregator.rs  data_client.rs  data_interface.rs  data_processing.rs  deduplication_interface.rs  errors.rs  file_cleaner.rs  file_download_session.rs  file_downloader.rs  file_upload_session.rs  lib.rs  metrics.rs  parallel_xorb_uploader.rs  pointer_file.rs  progress_tracking.rs  remote_client_interface.rs  remote_shard_interface.rs  sha256.rs  shard_interface.rs  streaming.rs  test_clean_smudge.rs  test_utils.rs  xet_file.rs
data/tests/: integration_tests.rs  test_clean_smudge.rs  test_session_resume.rs
deduplication/: Cargo.toml  README.md
deduplication/src/: chunking.rs  constants.rs  data_aggregator.rs  dedup_metrics.rs  defrag_prevention.rs  file_deduplication.rs  file_deduplication_old.rs  interface.rs  interfaces.rs  lib.rs  parallel_chunking.rs  raw_xorb_data.rs
file_hash_tool/: .gitignore  Cargo.toml
file_hash_tool/src/: main.rs
file_utils/: Cargo.toml
file_utils/src/: file_metadata.rs  privilege_context.rs  safe_file_creator.rs
git_xet/: Cargo.toml  README.md  install.sh
git_xet/src/: app.rs  auth.rs  constants.rs  errors.rs  git_lfs_auth.rs  git_process_wrapping.rs  git_repo.rs  git_url.rs  hub_client.rs  hub_client_token_refresher.rs  lfs_agent_protocol.rs  lib.rs  token_refresher.rs
git_xet/tests/: test_ssh.rs
git_xet/windows_installer/: Package.wxs  sign_metadata.json
hf_xet/: .gitignore  Cargo.toml  demo_ttft_baseline.py  demo_ttft_cuda.py  hf_xet.pyi  pyproject.toml
hf_xet/examples/: README.md  basic_usage.py  session_demo.py
hf_xet/src/: background_progress.rs  config.rs  data_client.rs  download_session.rs  headers.rs  lib.rs  log.rs  log_buffer.rs  logging.rs  profiling.rs  progress_update.rs  py_download_group.rs  py_download_stream_group.rs  py_download_stream_handle.rs  py_file_download_group.rs  py_file_download_handle.rs  py_file_upload_handle.rs  py_stream_upload_handle.rs  py_upload_commit.rs  py_xet_session.rs  runtime.rs  session.rs  telemetry.rs  token_refresh.rs  upload_session.rs  utils.rs
hf_xet/tests/: conftest.py  test_config.py  test_file_download.py  test_progress.py  test_session.py  test_stream_download.py  test_upload_commit.py  test_xet_session.py
hf_xet_git_integration/: Cargo.toml
hf_xet_git_integration/src/: app.rs  constants.rs  errors.rs  lfs_agent_protocol.rs  lib.rs
hf_xet_js/: .editorconfig  .prettierrc  Cargo.toml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
hf_xet_js/lib/: index.ts
hf_xet_js/src/: error.rs  lib.rs  types.rs  utils.rs
hf_xet_thin_wasm/: Cargo.toml
hf_xet_thin_wasm/src/: lib.rs
hf_xet_wasm/: Cargo.toml  README.md  build_wasm.sh  webdriver.json
hf_xet_wasm/examples/: commit.js  index.html  simple.rs  worker.js  xet_meta.js
hf_xet_wasm/src/: auth.rs  blob_reader.rs  configurations.rs  errors.rs  interface.rs  lib.rs  session.rs  sha256.rs  wasm_deduplication_interface.rs  wasm_file_cleaner.rs  wasm_file_upload_session.rs  wasm_timer.rs  xorb_uploader.rs
http_client/: Cargo.toml
http_client/src/: lib.rs
hub_client/: Cargo.toml
hub_client/examples/: list_files.rs
hub_client/src/: auth.rs  client.rs  errors.rs  lib.rs  types.rs
mdb_shard/: Cargo.toml  README.md
mdb_shard/src/: cas_structs.rs  constants.rs  error.rs  file_structs.rs  interpolation_search.rs  lib.rs  minimal_shard.rs  serialization_utils.rs  session_directory.rs  set_operations.rs  shard_benchmark.rs  shard_dedup_probe.rs  shard_file_handle.rs  shard_file_manager.rs  shard_file_reconstructor.rs  shard_format.rs  shard_in_memory.rs  streaming_shard.rs  utils.rs  xorb_structs.rs
merkledb/: Cargo.toml
merkledb/benches/: rolling_hash_benchmark.rs
merkledb/src/: aggregate_hashes.rs  async_chunk_iterator.rs  chunk_iterator.rs  error.rs  internal_methods.rs  merkledb_debug.rs  merkledb_highlevel_v1.rs  merkledb_ingestion_v1.rs  (+5 more)
merklehash/: Cargo.toml
parutils/: Cargo.toml
progress_tracking/: Cargo.toml
simulation/: Cargo.toml
utils/: Cargo.toml
visualization/: Cargo.toml
wasm-xet-core/: Cargo.toml
wasm_xet/: Cargo.toml  README.md  build_wasm.sh
write_bench/: Cargo.toml  REPORT.md  run_bench.sh
(+1123 files in other folders)
