[workspace]
resolver = "2"

members = [
    "cas_client",
    "cas_object",
    "cas_types",
    "data",
    "error_printer",
    "file_utils",
    "merklehash",
    "mdb_shard",
    "parutils",
    "utils",
    "cas_object",
    "cas_types",
    "chunk_cache",
    "xet_threadpool",
    "deduplication", "progress_tracking"]

exclude = ["hf_xet", "chunk_cache_bench", "wasm_xet"]

[profile.release]
opt-level = 3
lto = true
debug = 1

[profile.opt-test]
inherits = "dev"
opt-level = 3
debug = 1

[workspace.dependencies]
tokio = "1.44" #feat
tokio-retry = "0.3.0"
thiserror = "2.0"
tracing = "0.1"
lazy_static = "1.4"
once_cell = "1.20"
futures = "0.3"
futures-io = "0.3"
futures-util = "0.3"
paste = "0.1"
ctor = "0.1"
bytes = "1.8"
async-trait = "0.1"
parking_lot = "0.11"
pin-project = "1"
more-asserts = "0.3"
async-scoped = "0.7" #feat
len-trait = "0.6"
rand = "0.9" #feat
rand_chacha = "0.9"
blake3 = "1.5"
gearhash = "0.1"
crc32fast = "1.4"
safe-transmute = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
derivative = "2.2"
base64 = "0.22"
walkdir = "2"
rayon = "1.5"
bincode = "1.3"
rustc-hash = "1.1"
tempfile = "3.20"
bitflags = "1.3"
clap = { version = "3.1", features = ["derive"] }
regex = "1"
anyhow = "1"
static_assertions = "1.1"
itertools = "0.13"
libc = "0.2"
toml = "0.5"
dirs = "5.0"
ulid = "1.2"
prometheus = "0.13"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
chrono = "0.4"
mockall = "0.13"
lz4_flex = "0.11"
csv = "1"
countio = { version = "0.2.19", features = ["futures"] }
http = "1"
url = "2.5"
heed = "0.11"
half = "2.4"
