[workspace]
resolver = "2"

members = [
    "cas_client",
    "cas_object",
    "cas_types",
    "chunk_cache",
    "data",
    "deduplication",
    "error_printer",
    "file_utils",
    "mdb_shard",
    "merklehash",
    "parutils",
    "progress_tracking",
    "utils",
    "xet_threadpool"]

exclude = ["chunk_cache_bench", "hf_xet", "wasm_xet"]

[profile.release]
opt-level = 3
lto = true
debug = 1

[profile.opt-test]
inherits = "dev"
opt-level = 3
debug = 1

[workspace.dependencies]
anyhow = "1"
async-scoped = "0.7" #feat
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bitflags = "1.3"
blake3 = "1.5"
bytes = "1.8"
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
countio = { version = "0.2.19", features = ["futures"] }
crc32fast = "1.4"
csv = "1"
ctor = "0.1"
derivative = "2.2"
dirs = "5.0"
futures = "0.3"
futures-io = "0.3"
futures-util = "0.3"
gearhash = "0.1"
half = "2.4"
heed = "0.11"
http = "1"
itertools = "0.13"
jsonwebtoken = "9.3"
lazy_static = "1.4"
len-trait = "0.6"
libc = "0.2"
lz4_flex = "0.11"
mockall = "0.13"
more-asserts = "0.3"
once_cell = "1.20"
parking_lot = "0.11"
paste = "0.1"
pin-project = "1"
prometheus = "0.13"
rand = "0.9" #feat
rand_chacha = "0.9"
rayon = "1.5"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
rustc-hash = "1.1"
safe-transmute = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
static_assertions = "1.1"
tempfile = "3.20"
thiserror = "2.0"
tokio = "1.44" #feat
tokio-retry = "0.3.0"
toml = "0.5"
tracing = "0.1"
ulid = "1.2"
url = "2.5"
walkdir = "2"
