[workspace]
resolver = "2"

members = [
    "cas_client",
    "cas_object",
    "cas_types",
    "chunk_cache",
    "xet_config",
    "data",
    "deduplication",
    "error_printer",
    "file_reconstruction",
    "file_utils",
    "git_xet",
    "hub_client",
    "mdb_shard",
    "merklehash",
    "progress_tracking",
    "utils",
    "xet_logging",
    "xet_runtime",
]

exclude = ["chunk_cache_bench", "hf_xet", "hf_xet_wasm", "hf_xet_thin_wasm"]

[profile.release]
opt-level = 3
lto = true
debug = 1

[profile.opt-test]
inherits = "dev"
opt-level = 3
debug = 1

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bitflags = { version = "2.10", features = ["serde"] }
blake3 = "1.8"
bytemuck = "1"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "3"
console-subscriber = "0.5"
countio = { version = "0.3", features = ["futures"] }
crc32fast = "1.5"
csv = "1"
ctor = "0.6"
derivative = "2.2"
dirs = "6.0"
duration-str = "0.19"
futures = "0.3"
futures-util = "0.3"
gearhash = "0.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
git-url-parse = "0.4"
git-version = "0.3"
git2 = "0.20"
half = "2.7"
heapify = "0.2"
heed = "0.22"
http = "1"
hyper = "1.8"
hyper-util = "0.1"
itertools = "0.14"
lazy_static = "1.5"
libc = "0.2"
lz4_flex = "0.12"
mockall = "0.14"
more-asserts = "0.3"
once_cell = "1.21"
oneshot = "0.1"
paste = "1.0"
pin-project = "1"
prometheus = "0.14"
rand = "0.9"
rand_chacha = "0.9"
regex = "1"
reqwest = { version = "0.13.1", features = [
    "json",
    "stream",
    "system-proxy",
    "socks",
], default-features = false }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
rust-netrc = "0.1"
safe-transmute = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.10"
shell-words = "1.1"
shellexpand = "3.1"
static_assertions = "1.1"
statrs = "0.18"
sysinfo = "0.38"
tempfile = "3.25"
thiserror = "2.0"
tokio = { version = "1.49" }
tokio-retry = "0.3"
tokio-util = { version = "0.7" }
tower-service = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ulid = "1.2"
url = "2.5"
urlencoding = "2.1"
uuid = "1"
walkdir = "2"
warp = { version = "0.4", features = ["server"] }
web-time = "1.1"
whoami = "2"

# windows
winapi = { version = "0.3", features = [
    "winerror",
    "winnt",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
] }

# dev-deps
approx = "0.5"
httpmock = "0.8"
rand_core = "0.6"
rand_distr = "0.5"
russh = "0.55"
serial_test = "3"
tempdir = "0.3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
wiremock = "0.6"
