[package]
name = "cas_client"
version = "0.14.5"
edition = "2024"


[dependencies]
cas_object = { path = "../cas_object" }
cas_types = { path = "../cas_types" }
deduplication = { path = "../deduplication" }
error_printer = { path = "../error_printer" }
file_utils = { path = "../file_utils" }
mdb_shard = { path = "../mdb_shard" }
merklehash = { path = "../merklehash" }
progress_tracking = { path = "../progress_tracking" }
utils = { path = "../utils" }
xet_runtime = { path = "../xet_runtime" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
more-asserts = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Reqwest -- uses different flags with different features.
[features]
strict = []
default = ["rustls-tls"]
elevated_information_level = []

# Three options for compliation here.
rustls-tls = [
    "reqwest/rustls-tls",
    "reqwest/rustls-tls-webpki-roots",
    "reqwest/rustls-tls-native-roots",
]

# rustls-tls uses the rustls package, which embeds all of the ssl stuff in a rust package.  This is the
# most portable option, but also may not respect local network configurations.  Use this if the native-ssl options don't work.
# Uses native tls in the request package; this uses the native-tls package to wrap openssl, which is a more robust and portable
# way of ensuring that tls just works.
native-tls = ["reqwest/native-tls"]

# This uses the above, but statically compiles in openssl, which makes the result more portable at the expense of
# library size.
native-tls-vendored = ["reqwest/native-tls-vendored"]


[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = { workspace = true }
duration-str = { workspace = true }
futures-util = { workspace = true }
heed = { workspace = true }
hyper = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = { workspace = true }
warp = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
httpmock = { workspace = true }
rand_distr = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }

# Local CAS server binary - wraps LocalClient with HTTP API for testing
[[bin]]
name = "local_cas_server"
path = "src/simulation/local_server/main.rs"
