[package]
name = "cas_client"
version = "0.14.5"
edition = "2024"


[dependencies]
cas_object = { path = "../cas_object" }
cas_types = { path = "../cas_types" }
deduplication = { path = "../deduplication" }
error_printer = { path = "../error_printer" }
file_utils = { path = "../file_utils" }
mdb_shard = { path = "../mdb_shard" }
merklehash = { path = "../merklehash" }
utils = { path = "../utils" }
xet_runtime = { path = "../xet_runtime" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
more-asserts = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Reqwest -- uses different flags with different features.
[features]
strict = []
default = ["rustls-tls"]
elevated_information_level = []

# rustls-tls uses the rustls package with rustls-platform-verifier, which verifies TLS
# certificates using the platform's native certificate store (Security.framework on macOS,
# SChannel on Windows, system cert paths on Linux). Falls back to bundled webpki-roots
# when the system store is unavailable (e.g. minimal containers).
rustls-tls = ["reqwest/rustls"]

# native-tls wraps the platform's TLS library (OpenSSL on Linux, SChannel on Windows,
# Security.framework on macOS). Use this if rustls causes issues in specific environments.
native-tls = ["reqwest/native-tls"]

# Same as native-tls but statically compiles OpenSSL, making the result more portable
# at the expense of binary size. Useful for manylinux builds where system OpenSSL may
# not be available.
native-tls-vendored = ["reqwest/native-tls-vendored"]


[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = { workspace = true }
futures-util = { workspace = true }
heed = { workspace = true }
hyper = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
warp = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
httpmock = { workspace = true }
rand_distr = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }

# Local CAS server binary - wraps LocalClient with HTTP API for testing
[[bin]]
name = "local_cas_server"
path = "src/simulation/local_server/main.rs"

[[bin]]
name = "simulation_server"
path = "tests/adaptive_concurrency/src/simulation_server.rs"

[[bin]]
name = "simulation_client"
path = "tests/adaptive_concurrency/src/simulation_client.rs"
test = true

[[bin]]
name = "generate_summary"
path = "tests/adaptive_concurrency/src/generate_summary.rs"
test = true

[[bin]]
name = "generate_scenario_report"
path = "tests/adaptive_concurrency/src/generate_scenario_report.rs"
test = true
