[package]
name = "cas_object"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "compression_bench"
harness = false
bench = true

[[bench]]
name = "bg_split_regroup_bench"
harness = false
bench = true

[dependencies]
deduplication = { path = "../deduplication" }
error_printer = { path = "../error_printer" }
mdb_shard = { path = "../mdb_shard" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
parutils = { path = "../parutils" }
utils = { path = "../utils" }

anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { version = "4.1", features = ["derive"] }
countio = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
half = { workspace = true }
lz4_flex = { workspace = true }
more-asserts = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio-util = { version = "0.7.12", features = ["io"] }

[[bin]]
path = "src/byte_grouping/compression_stats/collect_compression_stats.rs"
name = "collect_compression_stats"

[[bin]]
path = "src/byte_grouping/bg4_prediction_benchmark.rs"
name = "bg4_prediction_benchmark"
