[package]
name = "chunk_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
cas_types = { path = "../cas_types" }
merklehash = { path = "../merklehash" }
error_printer = { path = "../error_printer" }
file_utils = { path = "../file_utils" }
utils = { path = "../utils" }
thiserror = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
mockall = { workspace = true }
clap = { version = "4.5.20", optional = true, features = ["derive"] }
once_cell = { workspace = true }
crc32fast = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
tempdir = "0.3.7"

[[bin]]
name = "cache_analysis"
path = "./src/bin/analysis.rs"
required-features = ["analysis"]


[features]
analysis = ["dep:clap"]
