[package]
name = "chunk_cache_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
cas_types = { path = "../cas_types" }
chunk_cache = { path = "../chunk_cache" }

async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
sccache = "0.8"
tempdir = "0.3"
tokio = { version = "1.44", features = ["full"] }

[[bench]]
name = "cache_bench"
harness = false
bench = true

# To run: ./cache_resilience_test parent
[[bin]]
name = "cache_resilience_test"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
rand = "0.8"
