[package]
name = "chunk_cache_fast"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
thiserror = "2.0.11"
error_printer = { path = "../error_printer" }
file_utils = { path = "../file_utils" }
utils = { path = "../utils" }
cas_types = { path = "../cas_types" }
merklehash = { path = "../merklehash" }
base64 = "0.22.1"
tracing = "0.1.41"
rand = "0.8.5"
mockall = "0.13.1"
once_cell = "1.20.2"
dashmap = "6.1.0"
tokio = { version = "1.36", features = ["rt"] }

[dev-dependencies]
tempdir = "0.3.7"
