[package]
name = "data"
version = "0.14.5"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "x"
path = "src/bin/example.rs"

[[bin]]
name = "xtool"
path = "src/bin/xtool.rs"

[dependencies]
cas_client = { path = "../cas_client" }
cas_object = { path = "../cas_object" }
cas_types = { path = "../cas_types" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
mdb_shard = { path = "../mdb_shard" }
utils = { path = "../utils" }
parutils = { path = "../parutils" }
error_printer = { path = "../error_printer" }
xet_threadpool = { path = "../xet_threadpool" }
deduplication = { path = "../deduplication" }
progress_tracking = { path = "../progress_tracking" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
static_assertions = { workspace = true }
rand_chacha = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
more-asserts = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }

# metrics
prometheus = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }

# Need to specify this as optional to allow the openssl/vendored option below
openssl = { version = "0.10", features = [], optional = true }
reqwest-middleware = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
openssl = "0.10"

# use embedded webpki root certs for MacOS as native certs take a very long time
# to load, which affects startup time significantly
[target.'cfg(macos)'.dependencies]
reqwest = { version = "0.11.4", features = ["json", "webpki-roots"] }

[target.'cfg(not(macos))'.dependencies]
reqwest = { version = "0.11.4", features = ["json"] }

# Windows doesn't support assembly for compilation
[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { version = "0.10.8" }

[dev-dependencies]
serial_test = "3.2.0"
tracing-test = "0.2.5"

[features]
strict = []
expensive_tests = []
openssl_vendored = ["openssl/vendored"]
