[package]
name = "deduplication"
version = "0.14.5"
edition = "2021"

[dependencies]
gearhash = { workspace = true }
merklehash = { path = "../merklehash" }
mdb_shard = { path = "../mdb_shard" }
merkledb = { path = "../merkledb" }
progress_tracking = { path = "../progress_tracking" }
utils = { path = "../utils" }
more-asserts = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
rand = "0.9.0"
