[package]
name = "file_utils"
version = "0.14.2"
edition = "2021"

[dependencies]
tracing = { workspace = true }
libc = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winerror",
    "winnt",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
] }

[target.'cfg(unix)'.dependencies]
whoami = "1.4.1"
colored = "2.0.0"

[dev-dependencies]
anyhow = "1"
tempfile = "3.2.0"
