[package]
name = "git_xet"
version = "0.2.1"
edition = "2024"
publish = false

[[bin]]
name = "git-xet"
path = "src/bin/main.rs"

[dependencies]
xet-data = { path = "../xet_data", features = ["simulation"] }
xet-runtime = { path = "../xet_runtime" }
xet-client = { path = "../xet_client", features = ["simulation"] }
xet-pkg = { package = "hf-xet", path = "../xet_pkg", features = ["simulation"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
git-url-parse = { workspace = true }
git2 = { workspace = true }
http = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
russh = { workspace = true }
rust-netrc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[features]
smoke-test = []
git-xet-for-integration-test = []
git2-vendored-openssl = ["git2/vendored-openssl"]

# tell cargo-machete a renamed crate
[package.metadata.cargo-machete.renamed]
rust-netrc = "netrc"
