[package]
name = "hf_xet"
version = "1.2.1"
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hf_xet"
crate-type = ["cdylib"]

[dependencies]
cas_client = { path = "../cas_client" }
data = { path = "../data" }
error_printer = { path = "../error_printer" }
progress_tracking = { path = "../progress_tracking" }
utils = { path = "../utils" }
xet_config = { path= "../xet_config" }
xet_logging = { path = "../xet_logging" }
xet_runtime = { path = "../xet_runtime" }

async-trait = "0.1"
chrono = "0.4"
itertools = "0.14"
lazy_static = "1.5"
pprof = { version = "0.14", features = [
    "flamegraph",
    "prost",
    "protobuf-codec",
], optional = true }
pyo3 = { version = "0.26", features = [
    "extension-module",
    "abi3-py37",
    "auto-initialize",
] }
rand = "0.9.2"
tracing = "0.1"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon", "errhandlingapi"] }

[features]
default = ["no-default-cache", "elevated_information_level"] # By default, hf_xet disables the disk cache and uses aggressive logging level
native-tls = ["cas_client/native-tls-vendored"]
native-tls-vendored = ["cas_client/native-tls-vendored"]
no-default-cache = ["xet_config/no-default-cache"]
profiling = ["pprof"]
tokio-console = ["xet_logging/tokio-console"]
elevated_information_level = ["cas_client/elevated_information_level", "utils/elevated_information_level"]

[profile.release]
split-debuginfo = "packed"
opt-level = "s"
lto = true
codegen-units = 1

# on manylinux and macos maturin + split-debuginfo doesn't output debug symbols for .so objects,
# so we need a different profile to build. For mac, the below settings will output a .dSYM
# file. For Linux, we are stripping them manually using binutils.
[profile.release-dbgsymbols]
inherits = "release"
debug = true
split-debuginfo = "none"


[profile.opt-test]
inherits = "dev"
debug = true
opt-level = 3

# cargo-machete has detected the below unused dependency incorrectly
[package.metadata.cargo-machete]
ignored = ["cas_client", "xet_config"]