[package]
name = "hf_xet"
version = "1.4.2"
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hf_xet"
crate-type = ["cdylib", "lib"]

[dependencies]
xet-runtime = { path = "../xet_runtime" }
xet-client = { path = "../xet_client" }
xet-data = { path = "../xet_data" }

async-trait = "0.1"
chrono = "0.4"
itertools = "0.14"
lazy_static = "1.5"
pprof = { version = "0.14", features = [
    "flamegraph",
    "prost",
    "protobuf-codec",
], optional = true }
pyo3 = { version = "0.26", features = [
    "abi3-py37",
    "auto-initialize",
] }
rand = "0.9"
tracing = "0.1"
http = "1" 

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon", "errhandlingapi"] }

[features]
default = ["no-default-cache", "elevated_information_level"] # By default, hf_xet disables the disk cache and uses aggressive logging level
extension-module = ["pyo3/extension-module"] # Only enabled when building with maturin
native-tls = ["xet-client/native-tls-vendored"]
native-tls-vendored = ["xet-client/native-tls-vendored"]
no-default-cache = ["xet-runtime/no-default-cache"]
profiling = ["pprof"]
tokio-console = ["xet-runtime/tokio-console"]
elevated_information_level = ["xet-client/elevated_information_level", "xet-runtime/elevated_information_level"]

[profile.release]
split-debuginfo = "packed"
opt-level = "s"
lto = true
codegen-units = 1

# on manylinux and macos maturin + split-debuginfo doesn't output debug symbols for .so objects,
# so we need a different profile to build. For mac, the below settings will output a .dSYM
# file. For Linux, we are stripping them manually using binutils.
[profile.release-dbgsymbols]
inherits = "release"
debug = true
split-debuginfo = "none"


[profile.opt-test]
inherits = "dev"
debug = true
opt-level = 3

# cargo-machete has detected the below unused dependency incorrectly
[package.metadata.cargo-machete]
ignored = ["xet-client", "xet-runtime"]
