[package]
name = "hf_xet_git_integration"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "git-xet"
path = "src/bin/main.rs"

[dependencies]
data = {path = "../data"}

anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }