[package]
name = "hf_xet_git_integration"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "git-xet"
path = "src/bin/main.rs"

[dependencies]
data = {path = "../data"}

anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }