[package]
name = "hf_xet_thin_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
deduplication = { path = "../deduplication" }
mdb_shard = { path = "../mdb_shard" }
merklehash = { path = "../merklehash" }

serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
serde_json = "1.0.143"
base64 = "0.22.1"
