[package]
name = "hf_xet_thin_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
deduplication = { path = "../deduplication" }
mdb_shard = { path = "../mdb_shard" }
merklehash = { path = "../merklehash" }

getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "=0.2.108"

[package.metadata.cargo-machete]
ignored = ["getrandom"]
