[package]
name = "hf_xet_wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.50"
tokio = { version = "1.44", features = ["sync"] }
futures-io = "0.3.31"
web-sys = { version = "0.3.72", features = [
    "File",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Blob",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Url",
    "Worker",
    "WorkerType",
    "WorkerOptions",
    "Window",
    "Navigator",
    "WorkerNavigator",
] }
js-sys = "0.3.72"
futures = "0.3.31"
sha2 = "0.10.8"
blake3 = "1.7.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm_thread = "0.3"
log = "0.4.22"
env_logger = "0.11.5"
console_log = { version = "1.0.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
async-trait = "0.1.88"
thiserror = "2.0"
async-channel = "2.3.1"

merklehash = { path = "../merklehash" }
deduplication = { path = "../deduplication" }
mdb_shard = { path = "../mdb_shard" }
merkledb = { path = "../merkledb" }
cas_object = { path = "../cas_object" }
cas_client = { path = "../cas_client" }
cas_types = { path = "../cas_types" }
utils = { path = "../utils" }
serde = { version = "1.0.217", features = ["derive"] }


[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
